--- a/customer.html
+++ b/customer.html
@@ -17,7 +17,7 @@
     <div class="logo" style="width: 100px"><img src="go.png" style="width: 72%"></div>
     <nav role='navigation'>
       <ul>
-        <li><a href="index.html">Orders</a></li>
+        <li><a href="index1.html">Orders</a></li>
         <li><a href="#">Stores</a></li>
         <li><a href="#">Customers</a></li>
         <li><a href="#">Employess</a></li>
