--- a/index1.html
+++ b/index1.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <title></title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body ng-app="myApp" ng-controller="myCtrl">
 <header id="topnav">
@@ -22,14 +23,14 @@
   </div>
 </header>
 <div style="position: fixed;right: 132px;top: 52%;font-size: 39px;">
-	PENDING ORDERS
-	<BR><span style="font-size: 139px;color:  green;">{{records.length}}</span>
+  PENDING ORDERS
+  <BR><span style="font-size: 139px;color:  green;">{{records.length}}</span>
 </div>
 <div style="width: 50%;border: 1px solid;margin: 5px;box-shadow: grey 2px 2px 2px;background: #8080801f" ng-repeat="x in records track by $index">
 <section style="width: 554px;margin: 28px;">
   <table style="width: 94%;margin-left: 5%;margin-right: 1%;">
     <tr>
-      <td><p style="color: orange">ORDER ID <span># {{x.ID}}</span></p></td>  <td style="color: orangered"><i class="fa fa-inr" aria-hidden="true"></i>{{ x.totalprice }}</td>   
+      <td><p style="color: orange">ORDER ID <span># {{x.ID}}</span></p></td>  <td style="color: orangered"><i class="fa fa-inr" aria-hidden="true"></i>1000</td>   
     </tr>
     <tr>
       <table style="width: 100%" ng-repeat="item in items[$index]">
@@ -37,15 +38,22 @@
         <td style="width: 25%"><span ng-if = "item.weight == 1">500 gms</span><span ng-if = "item.weight == 2">1000 gms</span></td><td style="width: 15%">{{item.qty}}</td><td style="width: 25%"><i class="fa fa-inr" aria-hidden="true"></i>{{item.prize}}</td></tr>
       </table>
     </tr>
-    <BUTTON style="    /* float: right; */
-    margin-left: 31em !important;
-    margin: 13px;
+    <input type="text" name="" style="
+    padding-right: 0px;
+    padding-left: 0px;
+    width: 43%;
+    float: left;
+    margin-left: 21em !important;
+    margin-top: 2em;
     background: none;
     border: 1px solid orange;
-    background: orange;
-    padding-left: 36px !important;
-    padding: 6px;
-    padding-right: 36px !important" ng-click="stschanged(x.ID)">ASSIGN</BUTTON>
+    padding: 6px;" list="list" id={{$index}}>
+    <datalist id="list" ng-model="employee">
+      <option ng-value={{y.ID}} ng-repeat="y in records1 track by $index">{{ y.name }}</option>
+    </datalist>
+    <span class="fa fa-motorcycle" ng-click="stschanged(x.ID,$index)" style="margin-left: 9px;
+    margin-top: 2em;
+    color: orange"></span>
   </table>
 </section>
 <section style="width: 554px;/* border: 1px solid; */margin: 28px;">
@@ -75,7 +83,7 @@
  <script>
 var app = angular.module('myApp', []);
 app.controller('myCtrl', function($scope, $http) {
-	$scope.items=[];
+  $scope.items=[];
     $http.get("http://gononveg.com/api/showOrders",{headers:{
 'Access-Control-Allow-Origin': 'http://gononveg.com/',
 "Access-Control-Allow-Credentials": "true",
@@ -84,30 +92,43 @@ app.controller('myCtrl', function($scope, $http) {
     .then(function(response) {
         $scope.records = response.data;
         for(var i=0;i<$scope.records.length;i++){
-        	$scope.items[i]=JSON.parse($scope.records[i].items);
+          $scope.items[i]=JSON.parse($scope.records[i].items);
         }
         console.log($scope.items);
         console.log($scope.records);
     });
-    $scope.stschanged = function(id){
-    	 $http.post("http://gononveg.com/api/stschage?id="+id,)
+    $scope.stschanged = function(id,employee){
+      var emp=document.getElementById(employee).value;
+             $http.post("http://gononveg.com/api/stschage?id="+id+"&employee="+emp)
+    .then(function(response) {
+       $http.post("http://gononveg.com/api/assign?id="+id+"&employee="+emp)
     .then(function(response) {
         
         
-	$scope.items=[];
+  $scope.items=[];
     $http.get("http://gononveg.com/api/showOrders")
     .then(function(response) {
         $scope.records = response.data;
         for(var i=0;i<$scope.records.length;i++){
-        	$scope.items[i]=JSON.parse($scope.records[i].items);
+          $scope.items[i]=JSON.parse($scope.records[i].items);
         }
         console.log($scope.items);
         console.log($scope.records);
+        document.getElementById(employee).value = "";
     });
     });
+     });
     }
-
+$http.post("http://gononveg.com/api/emp")
+    .then(function(response) {
+        $scope.records1 = response.data;
+        for(var i=0;i<$scope.records.length;i++){
+          $scope.items[i]=JSON.parse($scope.records1.items);
+        }
+        console.log($scope.records1);
+    });
 });
+
 
 </script>
 
