--- a/store.html
+++ b/store.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <title></title>
 </head>
-<body>
+<body ng-app="myApp" ng-controller="myCtrl">
 <header id="topnav">
   <div class="inner">
     <div class="logo" style="width: 100px"><img src="go.png" style="width: 72%"></div>
@@ -21,47 +22,58 @@
     </nav>  
   </div>
 </header>
-<div style="width: 50%;width: 50%;float: right;">
+
+<div style="width: 50%;float: right;" style="float: left;">
 <section style="width: 554px;/* border: 1px solid; */margin: 28px;box-shadow: grey 2px 2px 2px;">
-  <table style="width: 94%;margin-left: 5%;margin-right: 1%;">
-    <tr>
-      <td><p style="color: orange">ORDER ID <span># 10101</span></p></td>  <td style="color: orangered"><i class="fa fa-inr" aria-hidden="true"></i>1000</td>   
-    </tr>
-    <tr>
-      <table style="width: 100%">
-        <tr><td style="width: 40%"><p>BONE LESS</p></td>
-        <td style="width: 25%">500g</td><td style="width: 15%">10</td><td style="width: 25%"><i class="fa fa-inr" aria-hidden="true"></i>120</td></tr>
-         <tr><td style="width: 40%">WITH BONE</td>
-        <td style="width: 25%">1000g</td><td style="width: 15%">10</td><td style="width: 25%"><i class="fa fa-inr" aria-hidden="true"></i>120</td></tr>
-      </table>
-    </tr>
-    <BUTTON style="    /* float: right; */
-    margin-left: 31em !important;
-    margin: 13px;
-    background: none;
-    border: 1px solid orange;
-    background: orange;
-    padding-left: 36px !important;
-    padding: 6px;
-    padding-right: 36px !important">ASSIGN</BUTTON>
-  </table>
-</section>
-<section style="width: 554px;/* border: 1px solid; */margin: 28px;box-shadow: grey 2px 2px 2px;">
-  <table style="width: 100%">
-        <tr><td style="width: 40%"><p>NAME</p></td>
-        <td style="width: 25%">Saravanan M</td></tr>
-         <tr><td style="width: 40%">ADDRESS</td>
-        <td style="width: 25%">MEDAVAKKAM</td></tr>
-        <tr><td style="width: 40%">CITY</td>
-        <td style="width: 25%">chennai</td></tr>
-        <tr><td style="width: 40%">PINCODE</td>
-        <td style="width: 25%">623515</td></tr>
-         <tr><td style="width: 40%">MOBILE NUMBER</td>
-        <td style="width: 25%">9944825723</td></tr>
-      </table>
+  <form ng-model="data">
+    <input type="text" name="pincode" id="pincode" style="margin: 2%; width: 96%; border: 2px solid green; border-radius: 15px; padding: 1%" placeholder="Enter Store Pincode">
+    <input type="text" name="name" style="margin: 2%; width: 96%; border: 2px solid green; border-radius: 15px; padding: 1%"  placeholder="Enter Store Category">
+    <input type="file" name="imageupload" id="imageupload" style="margin: 2%; width: 96%; border-radius: 15px; padding: 1%" file-model = "myFile">
+    <input type="button" name="" style="margin: 2%; width: 96%; color: white; text-transform: uppercase; background: green; border: 2px solid green; border-radius: 15px; padding: 1%" ng-click="updatepin()">
+  </form>
 </section>
 </div>
-<div style="width: 50%">
+<div style="width: 50%" style="float: left;">
+  <input type="submit" name="" style="margin: 2%; width: 96%; color: white; text-transform: uppercase; background: green; border: 2px solid green; border-radius: 15px; padding: 1%" value="RESET SLOTS" onclick="updatepin()">
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-animate.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-aria.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-messages.min.js"></script>
+
+  <!-- Angular Material Library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
+<script type="text/javascript">
+    var app = angular.module('myApp', []);
+       app.directive('fileModel', ['$parse', function ($parse) {
+            return {
+               restrict: 'A',
+               link: function(scope, element, attrs) {
+                  var model = $parse(attrs.fileModel);
+                  var modelSetter = model.assign;
+                  
+                  element.bind('change', function(){
+                     scope.$apply(function(){
+                        modelSetter(scope, element[0].files[0]);
+                     });
+                  });
+               }
+            };
+         }]);
+      
+app.controller('myCtrl', function($scope, $http ) {
+        $scope.updatepin = function(){
+        	var selectedFile = document.getElementById('imageupload').files[0];
+  $http.post("http://gononveg.com/api/uploadfile?image="+selectedFile)
+    .then(function(response) {
+        $scope.records1 = response.data;
+        for(var i=0;i<$scope.records.length;i++){
+          $scope.items[i]=JSON.parse($scope.records1.items);
+        }
+        console.log($scope.records1);
+    });
+}
+});
+</script>
 </body>
 </html>
