--- a/index.html
+++ b/index.html
@@ -315,16 +315,18 @@ button:hover{
   <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
 <script type="text/javascript">
   var app = angular.module('myApp', []);
-app.controller('myCtrl', function($scope, $http) {
+app.controller('myCtrl', function($scope, $http, $window) {
      $scope.login = function(id){
 
        $http.post('http://gononveg.com/api/adminsignin?name='+$scope.name+'&pwd='+$scope.password,)
     .then(function(response) {
         $scope.records = response.data.login;
         if($scope.records == 'validuser'){
+         $window.localStorage.setItem('ls',response.data.Persons[0].pincode);
           window.location.href = "index1.html"
         }else{
           alert("In Valid Login");
+          alert();
         }
     });
     }
